chore: styling new component impl

--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -6,7 +6,7 @@
         "title": "Tandari Szállás",
         "sub_title": "Event hall"
     },
-    "main_page": "Main Page",
+    "main_page": "Home",
     "introduction": {
         "title": "Who are we?",
         "desc": [
