--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -42,10 +42,10 @@
         "desc": [
             "For reservations, inquiries about our prices, or if you have any questions, feel free to contact us!",
             "You can send your questions to the following email address:",
-            "@",
+            "info@salas-tandari.com",
             "You can also reach us by phone at the following numbers:",
             "Tandari Tünde-",
-            "Pálinkás József-",
+            "Pálinkás József +381(0)63-7488-149",
             "Get in touch with us, and we guarantee to make your upcoming event a memorable experience!"
         ]
     },
