--- a/src/locales/hu/index.json
+++ b/src/locales/hu/index.json
@@ -42,10 +42,10 @@
         "desc": [
             "Helyfoglalással, árainkkal kapcsolatban, illetve, ha bármi kérdésed lenne fordulj hozzánk bizalommal!",
             "Kérdéseidet a következő emailre tudod elküldeni:",
-            "@",
+            "info@salas-tandari.com",
             "Illetve telefonon is eltudsz minket érni, az alábbi telefonszámokon:",
             "Tandari Tünde-",
-            "Pálinkás József-",
+            "Pálinkás József +381(0)63-7488-149",
             "Vedd fel velünk a kapcsolatot és mi garantáljuk, hogy az elkövetkező eseményedet egy felejthetetlen emlékké tesszük számotokra!"
         ]
     },
