chore: static info change

--- a/src/locales/hu/index.json
+++ b/src/locales/hu/index.json
@@ -45,7 +45,7 @@
             "Kérdéseidet a következő emailre tudod elküldeni:",
             "info@salas-tandari.com",
             "Illetve telefonon is eltudsz minket érni, az alábbi telefonszámokon:",
-            "Tandari Tünde 06 42 821 495",
+            "Szekeres István és Bernadetta üzemeltető +381638067866, +381638869821",
             "Pálinkás József 06 37 488 149",
             "Vedd fel velünk a kapcsolatot és mi garantáljuk, hogy az elkövetkező eseményedet egy felejthetetlen emlékké tesszük számotokra!"
         ]
