--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -45,7 +45,7 @@
             "You can send your questions to the following email address:",
             "info@salas-tandari.com",
             "You can also reach us by phone at the following numbers:",
-            "Tandari Tünde 06 42 821 495",
+            "Szekeres István és Bernadetta opreator +381638067866, +381638869821",
             "Pálinkás József 06 37 488 149",
             "Get in touch with us, and we guarantee to make your upcoming event a memorable experience!"
         ]
